Bug #6863
lofs mount of single file cannot be opened with O_CREAT
Start date:
2016-04-07
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
The following illustrates how to reproduce this.
If you have a read-only file simulating /etc/shadow (mode 400),
mount -F lofs foo bar,
then try to force write to bar, you get ENOSYS.
If you have the same thing in a directory and lofs mount the
directory instead of the file, you can write to bar.
DTrace shows we're hitting the ENOSYS exit path out of lo_create here.
Updated by Electric Monk almost 5 years ago
- Status changed from New to Closed
git commit 5ffe84436efb0849931d99235105feb72ae5144d
commit 5ffe84436efb0849931d99235105feb72ae5144d Author: Jerry Jelinek <jerry.jelinek@joyent.com> Date: 2016-04-29T07:04:25.000Z 6863 lofs mount of single file cannot be opened with O_CREAT Reviewed by: Patrick Mooney <patrick.mooney@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>