6863 lofs mount of single file cannot be opened with O_CREAT Reviewed by: Patrick Mooney <patrick.mooney@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>